--- a/edu/chem/alloys.html
+++ b/edu/chem/alloys.html
@@ -15,7 +15,7 @@
 			body {
 				height: 100%;
 				background-color: blue; /* for older browsers that do not support gradients */
-				background-image: linear-gradient(blue, white,blue); /*gradient background */
+				background-image: linear-gradient(#00a2ff,#0000ff); /*gradient background */
 				font-family: Verdana, sans-serif;
 			}
 			.edu {
