--- a/eggg.html
+++ b/eggg.html
@@ -7,11 +7,11 @@
     	<style>
       		body {
         		height: 100%;
-				background-image: url("image/EasterEggs.jpg");
-				background-size: 100%;
+			background-image: url("image/EasterEggs.jpg");
+			background-size: 100%;
         		color: black;
-        		font-size: 50px;
-				text-align: center;
+        		font-size: 8vw;
+			text-align: center;
       		}
     	</style>
   <body>
