--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="color: #EEEEEE; padding: 0% 10% 12% 10%;">
+		<div style="color: #222222; padding: 0% 10% 12% 10%;">
 			<h1 style="text-align: center;">
 				Magnogen / hydronesium
 			</h1>
