--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
 			
 			<img src="/about/hydronesium.jpg" alt="Hydronesium profile picture" onclick="show_info(event,0)"><br>
 			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(event,1)"><br>
-			<img src="/about/jimbob123x.jpg" alt="Agunderman10 profile picture" onclick="show_info(event,2)">
+			<img src="/about/agunderman10.jpg" alt="Agunderman10 profile picture" onclick="show_info(event,2)">
 		</div>
 		<script>
 		function show_info (event, person) {
