--- a/edu/maths/complexNumbers.html
+++ b/edu/maths/complexNumbers.html
@@ -29,7 +29,7 @@
 			<h1 style="text-align: center;">
 				Maths: Complex numbers
 			</h1>
-		    <h2 style="color: #00a8ff">
+		    <h2 style="color: #0000a8">
 				Using complex numbers
 		    </h2>
 				Imagine an electronic piano. Each key produces a different tone. A volume control changes the amplitude (volume) of all the keys by the same amount. That's how real numbers affect signals.<br><br>
