--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
 				<div></div>
 			</div>
 			
-			<img src="/about/hydronesium.jpg" alt="Hydronesium profile picture" onclick="show_info(event,0)"><br>
+			<img src="/about/hydronesium.png" alt="Hydronesium profile picture" onclick="show_info(event,0)"><br>
 			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(event,1)"><br>
 			<img src="/about/agunderman10.jpg" alt="Agunderman10 profile picture" onclick="show_info(event,2)">
 		</div>
