--- a/edu/compSci/policies.html
+++ b/edu/compSci/policies.html
@@ -24,9 +24,9 @@
 			<h1 style="text-align: center;">
             	Computer science: Network policies
            	<h1>
-            <h2 style="color: #0000a8">
-				How to make a good network policy
-		    </h2>
+           	<h2 class="title">
+			How to make a good network policy
+		</h2>
             A network policy is used to show the users of the network the rules of using
            	the network. If you want to make a policy for your network, you can address the
             problems of the following scenarios:<br><br>
