--- a/edu/compSci/programming.html
+++ b/edu/compSci/programming.html
@@ -39,7 +39,7 @@
             	<a href="/edu/compSci/programming.html#subPrograms">SUB-PROGRAMS</a> |
                 <a href="/edu/compSci/programming.html#classes">CLASSES</a>
             </div>
-		    <h2 style="color: #00a8ff" id="subPrograms">
+		    <h2 class="title" id="subPrograms">
 				Sub-programs
 		    </h2>
 			Sub-programs are used when you don't want to type out the same code repeatedly throughout your program. There are two different types of sub-program: procedures and functions.<br>
@@ -167,7 +167,7 @@
     			2| &nbsp&nbsp&nbsp <span style="color: #003AFF;"><i>""" Greets a person """</i></span><br>
     			3| &nbsp&nbsp&nbsp print("Hello " + name + "!")<br>
             </div>
-            <h2 style="color: #00a8ff" id="classes">
+            <h2 class="title" id="classes">
 				Classes
 		    </h2>
             Classes are used when you want to bind multiple sub-programs with a similar topic together.<br>
