--- a/projects/music.html
+++ b/projects/music.html
@@ -57,7 +57,7 @@
 				Music
 			</h1>
 			(Please note that none of this page works correctly at the moment, it will be fixed when I have time. In the mean time, feel free to look at them via YouTube.)
-		    <h2 style="color: #00a8ff" id="originals">
+		    <h2 class="title" id="originals">
 				Albums
 		    </h2>
             <div id="songs" class="songs">Select an album...</div>
