Minor grammar fix

--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@
 			],[
 			"Agunderman10", "Developer", "\
 			Github: <a href=\"https://github.com/Agunderman10\">Agunderman10</a><br>",
-			"Hello, my names's Andrew. I love code of any kind and I enjoy contributing to\
+			"Hello, my name is Andrew. I love code of any kind and I enjoy contributing to\
 			open source projects. Feel free to contact me at my email listed on my Github page."
 			]
         ];
