Wishing you (to have) a Merry Christmas 🎄...
... and a happy New year.
Reply in a commit comment using @user-e.

--- a/index.html
+++ b/index.html
@@ -21,16 +21,34 @@
 			</h1>
 			<p></p>
 			<h3 style="text-align: center;">
-			    Inspiring the next generation<span style="font-size: 6px;">#</span>
-            </h3>
+			    Inspiring the next generation<a
+                                href="/easteregg.html"><span
+                                style="font-size: 0.25em;">#</span>
+                                </a>
+                        </h3>
 			<br>
-			Welcome to the official Magnogen website! There have been a few contributors to help this website, especially in it's infant stages, you can see those individuals <a href="/about/">here</a>.<br>
-            <br>
-            We've got a few projects on the go at the moment, you can see them all under the projects tab above. ^ There are stories, <a href="/projects/music.html">songs</a> and <a href="/apps/">apps</a>! We hope you'll be interested!<br>
-            <br>
-            There is also a bit of interesting JavaScript-related stuff on the <a href="/javaScriptTesting/">JavaScript page</a> for you to have a look at (also above ^).<br>
-            <br>
-            Want to contact us? Feel free to do so under the <a href="/about/">about section</a>.
+			Welcome to the official Magnogen website!<br>
+			There have been a few contributors to help this website,
+			especially in it's infant stages, you can see those individuals
+			<a href="/about/">here</a>.
+			<br>
+                        <br>
+                        We've got a few projects on the go at the moment, you can see them all under
+                        the projects tab above. ^<br>
+                        There are stories, <a href="/projects/music.html">songs</a>
+                        and <a href="/apps/">apps</a>! We hope you'll be interested!<br>
+                        <br>
+                        There is also a bit of interesting JavaScript-related stuff on the
+                        <a href="/javaScriptTesting/">JavaScript page</a> for you to have a look at (also above ^).
+                        <br>
+                        <br>
+			<div style="/*display: none;*/">
+			<a href="/detail/188885/snowman-merry-christmas-card">
+				<img src="https://openclipart.org/download/188885/Snowman-Merry-Christmas-bw.svg" />
+			</a>
+			<br>Wishing you (to have) a Merry Christmas.
+			<br></div>
+                        Want to contact us? Feel free to do so under the <a href="/about/">about section</a>.
 		</div>
 	</body>
 </html>
