--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body class="dark">
     <header>
