Make sure all articles are available
- Remove Blog
- Remove Weber
- Add Sand
- Add Flood
- Remove Gentle
- Update Carbogen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <article socials>
         <h3><i class="fa fa-heart"></i>My Socials</h3>
-        <i class="fa-solid fa-shapes"></i><a href="https://blog.magnogen.net">Mag's Blog</a><br>
+<!--         <i class="fa-solid fa-shapes"></i><a href="https://blog.magnogen.net">Mag's Blog</a><br> -->
         <i class="fa-brands fa-youtube"></i><a href="https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw">YouTube - Magnogen</a><br>
         <i class="fa-brands fa-twitter"></i><a href="https://twitter.com/Magnog3n">Twitter - @Magnog3n</a><br>
         <i class="fa-brands fa-reddit-alien"></i><a href="https://www.reddit.com/user/MagnogenOnTheMoon">Reddit - u/MagnogenOnTheMoon</a><br>
@@ -48,7 +48,7 @@
         </p>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Weber">GitHub Repo</a><br>
       </article>
-      <article weber>
+<!--       <article weber>
         <h3><i class="fa fa-globe"></i>Weber</h3>
         <p>
           A site generation tool that converts a Markdown derivative into HTML, CSS and JavaScript.
@@ -58,22 +58,41 @@
           and GitHub too if they wanted.
         </p>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Weber">GitHub Repo</a><br>
+      </article> -->
+      <article sand>
+        <h3><i class="fa-solid fa-hill-rockslide"></i>Sand</h3>
+        <p>
+          A browser-based Cellular Automata written with JavaScript.
+          So far, only Sand is supported.
+        </p>
+        <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/sand">Web Page</a><br>
+        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/sand">GitHub Repo</a><br>
+      </article>
+      <article flood>
+        <h3><i class="fa-solid fa-paint-roller"></i>Flood</h3>
+        <p>
+          A browser-based colourful Flood-Fill Algorithm for creative coders.
+          Written in JavaScript.
+        </p>
+        <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/flood">Web Page</a><br>
+        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/flood">GitHub Repo</a><br>
       </article>
       <article carbogen>
         <h3><i class="fa fa-file-code"></i>Carbogen</h3>
         <p>
           A Lisp-like Programming Language that makes use of bubbles.
+          Currently only in the planning stage.
         </p>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Carbogen">GitHub Repo</a><br>
       </article>
-      <article gentle>
+<!--       <article gentle>
         <h3><i class="fa fa-file-code"></i>Gentle</h3>
         <p>
           A C-like Programming Language designed for making Generative Artwork.
           It works by doing maths on picture "layers".
         </p>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Gentle">GitHub Repo</a><br>
-      </article>
+      </article> -->
     </main>
     <div space></div>
     <footer>
