--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           to recursive-descent (<code>Meal</code>s), to <code>Vector</code>s (WIP).
           This is pretty helpful.
         </p>
-        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Weber">GitHub Repo</a><br>
+        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Elements">GitHub Repo</a><br>
       </article>
 <!--       <article weber>
         <h3><i class="fa fa-globe"></i>Weber</h3>
