--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
         <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/flood">Web Page</a><br>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/flood">GitHub Repo</a><br>
       </article>
+      <article graidients>
+        <h3><i class="fa-solid fa-circle-nodes"></i>Graidients</h3>
+        <p>
+          Generate gradients and patterns using Neural Networks.
+          Written in JavaScript.
+        </p>
+        <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/Graidients">Web Page</a><br>
+        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Graidients">GitHub Repo</a><br>
+      </article>
       <article carbogen>
         <h3><i class="fa fa-file-code"></i>Carbogen</h3>
         <p>
