a few style changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Magnogen's Official Website - Find all my projects and other thingies!" />
     <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel="stylesheet" href="src/style.css" />
   </head>
@@ -18,13 +19,14 @@
       <h2 class="greet"><hr>Hey! I'm Mag<hr></h2>
     </header>
     <canvas background></canvas>
+    <script src="sketch.js" defer></script>
     <main>
       <article socials>
         <h3><i class="fa fa-heart"></i>My Socials</h3>
 <!--         <i class="fa-solid fa-shapes"></i><a href="https://blog.magnogen.net">Mag's Blog</a><br> -->
-        <i class="fa-brands fa-youtube"></i><a href="https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw">YouTube - Magnogen</a><br>
+        <i class="fa-brands fa-youtube"></i><a href="https://www.youtube.com/@Magnogen">YouTube - @Magnogen</a><br>
         <i class="fa-brands fa-twitter"></i><a href="https://twitter.com/Magnog3n">Twitter - @Magnog3n</a><br>
-        <i class="fa-brands fa-reddit-alien"></i><a href="https://www.reddit.com/user/MagnogenOnTheMoon">Reddit - u/MagnogenOnTheMoon</a><br>
+        <i class="fa-brands fa-reddit-alien"></i><a href="https://www.reddit.com/u/MagnogenOnTheMoon">Reddit - u/MagnogenOnTheMoon</a><br>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen">GitHub - /Magnogen</a><br>
       </article>
       <article websites>
@@ -63,7 +65,7 @@
         <h3><i class="fa-solid fa-hill-rockslide"></i>Sand</h3>
         <p>
           A browser-based Cellular Automata written with JavaScript.
-          So far, only Sand is supported.
+          Play with a bunch of elements, from Sand and Water to Fire and Lava!
         </p>
         <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/sand">Web Page</a><br>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/sand">GitHub Repo</a><br>
@@ -119,6 +121,5 @@
       </main>
       Made with <i style="color:#ff0000" class="fa fa-heart"></i> by Magnogen
     </footer>
-    <script src="sketch.js"></script>
   </body>
 </html>
