add mastodon social

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       <article socials>
         <h3><i class="fa fa-heart"></i>My Socials</h3>
 <!--         <i class="fa-solid fa-shapes"></i><a href="https://blog.magnogen.net">Mag's Blog</a><br> -->
-        <i class="fa-brands fa-youtube"></i><a href="https://www.youtube.com/@Magnogen">YouTube - @Magnogen</a><br>
-        <i class="fa-brands fa-twitter"></i><a href="https://twitter.com/Magnog3n">Twitter - @Magnog3n</a><br>
+        <i class="fa-brands fa-youtube"></i><a href="https://www.youtube.com/@Magnogen">              YouTube - @Magnogen</a><br>
+        <i class="fa-brands fa-mastodon"></i><a href="https://cupoftea.social/@Mag">                  Mastodon - @Mag@cupoftea.social</a><br>
+        <i class="fa-brands fa-twitter"></i><a href="https://twitter.com/Magnog3n">                   Twitter - @Magnog3n</a><br>
         <i class="fa-brands fa-reddit-alien"></i><a href="https://www.reddit.com/u/MagnogenOnTheMoon">Reddit - u/MagnogenOnTheMoon</a><br>
-        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen">GitHub - /Magnogen</a><br>
+        <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen">                     GitHub - /Magnogen</a><br>
       </article>
       <article websites>
         <h3><i class="fa fa-globe"></i>Websites</h3>
