--- a/404.html
+++ b/404.html
@@ -1,59 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>
-        404 | Magnogen
-    </title>
-    <base href="https://magnogen.net" />
+    <title>404 Error | Magnogen</title>
+    <base href="https://magnogen.xyz" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Magnogen's Official Website - Find my Tracks, Apps, and Datapacks! Plus a few handy tools too..." />
-    <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://magnogen.net/src/basics.css" />
+    <meta name="description" content="Oops! Page Not Found - Magnogen's Official Website" />
+    <link rel="shortcut icon" href="https://magnogen.xyz/src/favicon.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body>
-    <script src="https://magnogen.net/src/navbar.js"
-            path="HOME"
-            rules="HOME:.here">
-    </script>
-    
-    <script src="https://magnogen.net/src/header.js"
-            colors="#0032a8,#004cff"
-            title="ERROR 404"
-            subtitle="I'm sorry, I'm afraid I can't do that"
-            shape="3">
-    </script>
-
-    <div class="w3-content w3-container w3-padding-64">
-      <h3 class="w3-center">How embarrassing...</h3>
-      <div class="w3-row"><div class="w3-padding-large">
+  <body class="dark">
+    <header>
+      <span></span>
+      <h1 class="title">MAGNOGEN</h1>
+      <h2 class="greet"><hr>Hey! I'm Mag<hr></h2>
+    </header>
+    <canvas background></canvas>
+    <script src="sketch.js" defer></script>
+    <main>
+      <article>
+        <h3><i class="fa fa-exclamation-circle"></i> Oops! Page Not Found</h3>
         <p>
-          It looks like I've failed in finding that page, maybe I can redirect you back to the last page you visited?<br><br>
-          <a href="javascript:history.back()">Click to go back</a><br><br>
-          Or, the following problems could be the case:<br>
-          <ul>
-            <li>
-              The link was typed out incorrectly - check for spelling mistaeks in the URL
-            </li>
-            <li>
-              The page you're looking for never existed
-            </li>
-            <li>
-                This page has been temporarily removed by an admin - so it should be back again soon
-            </li>
-            <li>
-                Someone had a complaint against this page or its contents and it had to be taken down
-            </li>
-          </ul>
+          Uh-oh! It looks like the page you are looking for doesn't exist. Sorry about that! But fear not, for I have some suggestions to help fix this mystical mishap:
         </p>
-      </div></div>
-    </div>
-
-    <script src="https://magnogen.net/src/footer.js"
-            colors="#0032a8,#004cff">
-    </script>
+        <ul>
+          <li>Embark on a quest to find the hidden treasure of the 404 Monster.</li>
+          <li>Summon a wise wizard and ask for their guidance to locate the lost page.</li>
+          <li>Take a sip of virtual tea and contemplate the mysteries of the digital universe.</li>
+        </ul>
+        <p>
+          Remember, in the realm of the internet, even errors can be whimsical adventures!
+        </p>
+      </article>
+    </main>
+    <div space></div>
+    <footer>
+      Made with <i style="color:#ff0000" class="fa fa-heart"></i> by Magnogen
+    </footer>
   </body>
 </html>
