--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -3,15 +3,15 @@
 	<title>
 		Privacy Policy | Magnogen
 	</title>
-  <base href="https://magnogen.net">
+  <base href="https://magnogen.xyz">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Magnogen's Privacy Policy - Magnogen.net">
-	<link rel="shortcut icon" href="https://magnogen.net/src/icon.ico">
+	<meta name="description" content="Magnogen's Privacy Policy - Magnogen.xyz">
+	<link rel="shortcut icon" href="https://magnogen.xyz/src/icon.ico">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://magnogen.net/src/basics.css">
+	<link rel="stylesheet" href="https://magnogen.xyz/src/basics.css">
 	<body>
 		<div class="w3-top">
 			<div class="w3-bar nav">
@@ -81,7 +81,7 @@
 			<div class="w3-row">
 				<div class="w3-padding-large">
 					<p>
-						This website (Magnogen.net) protects any personal information a visitor might input into the site. It does not <i>ever</i> ask for any personal information. If the visitor were to type any personal information into a search bar or anything similar, the query does not get stored anywhere.
+						This website (Magnogen.xyz) protects any personal information a visitor might input into the site. It does not <i>ever</i> ask for any personal information. If the visitor were to type any personal information into a search bar or anything similar, the query does not get stored anywhere.
             <br><br>
             I request visitors to please check this page frequently to get updates. If a visitor should have any doubts or questions, please contact me on Github, or via Email.
           </p>
