--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -3,7 +3,7 @@
 	<title>
 		Datapacks | Magnogen
 	</title>
-  <base href="https://magnogen.net">
+  <base href="https://magnogen.xyz">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Magnogen: My official website provides online access to my music, musical sample packs, and a new edition: a random quote generator! Just make sure to have fun when browsing my site!">
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://magnogen.net/src/basics.css">
+	<link rel="stylesheet" href="https://magnogen.xyz/src/basics.css">
 	<body>
 		<div class="w3-top">
 			<div class="w3-bar nav">
