--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>Home | Magnogen</title>
-    <base href="https://magnogen.net" />
+    <base href="https://magnogen.xyz" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Magnogen's Official Website - Find all my projects and other thingies!" />
-    <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png" />
+    <link rel="shortcut icon" href="https://magnogen.xyz/src/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -23,7 +23,7 @@
     <main>
       <article socials>
         <h3><i class="fa fa-heart"></i>My Socials</h3>
-<!--         <i class="fa-solid fa-shapes"></i><a href="https://blog.magnogen.net">Mag's Blog</a><br> -->
+<!--         <i class="fa-solid fa-shapes"></i><a href="https://blog.magnogen.xyz">Mag's Blog</a><br> -->
         <i class="fa-brands fa-youtube"></i><a href="https://www.youtube.com/@Magnogen">              YouTube - @Magnogen</a><br>
         <i class="fa-brands fa-mastodon"></i><a href="https://cupoftea.social/@Mag">                  Mastodon - @Mag@cupoftea.social</a><br>
         <i class="fa-brands fa-twitter"></i><a href="https://twitter.com/Magnog3n">                   Twitter - @Magnog3n</a><br>
@@ -68,7 +68,7 @@
           A browser-based Cellular Automata written with JavaScript.
           Play with a bunch of elements, from Sand and Water to Fire and Lava!
         </p>
-        <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/sand">Web Page</a><br>
+        <i class="fa-solid fa-globe"></i><a href="https://magnogen.xyz/sand">Web Page</a><br>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/sand">GitHub Repo</a><br>
       </article>
       <article flood>
@@ -77,7 +77,7 @@
           A browser-based colourful Flood-Fill Algorithm for creative coders.
           Written in JavaScript.
         </p>
-        <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/flood">Web Page</a><br>
+        <i class="fa-solid fa-globe"></i><a href="https://magnogen.xyz/flood">Web Page</a><br>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/flood">GitHub Repo</a><br>
       </article>
       <article graidients>
@@ -86,7 +86,7 @@
           Generate gradients and patterns using Neural Networks.
           Written in JavaScript.
         </p>
-        <i class="fa-solid fa-globe"></i><a href="https://magnogen.net/Graidients">Web Page</a><br>
+        <i class="fa-solid fa-globe"></i><a href="https://magnogen.xyz/Graidients">Web Page</a><br>
         <i class="fa-brands fa-github"></i><a href="https://github.com/Magnogen/Graidients">GitHub Repo</a><br>
       </article>
       <article carbogen>
@@ -108,18 +108,6 @@
     </main>
     <div space></div>
     <footer>
-      <main>
-        <article>
-          <h3>
-            <i class="fa-solid fa-trophy"></i>
-            Achievements
-            <i class="fa-solid fa-trophy"></i>
-          </h3>
-          <p>
-            Unlock achievements by doing stuff on my site!
-          </p>
-        </article>
-      </main>
       Made with <i style="color:#ff0000" class="fa fa-heart"></i> by Magnogen
     </footer>
   </body>
