--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>404 Error | Magnogen</title>
-    <base href="https://magnogen.xyz" />
+    <base href="https://magnogen.net" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Oops! Page Not Found - Magnogen's Official Website" />
-    <link rel="shortcut icon" href="https://magnogen.xyz/src/favicon.png" />
+    <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
