--- a/krypt/index.html
+++ b/krypt/index.html
@@ -3,14 +3,14 @@
 	<title>
 		Krypt | Magnogen
 	</title>
-  <base href="https://magnogen.xyz">
+  <base href="https://magnogen.net">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/src/icon.ico" rel="shortcut icon">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://magnogen.xyz/src/basics.css">
+	<link rel="stylesheet" href="https://magnogen.net/src/basics.css">
 	<script src="/krypt/skrypt.js"></script>
 	<style>
 		textarea, input {
