add weirdle to home page

--- a/index.html
+++ b/index.html
@@ -167,15 +167,21 @@
       </details>
       
       <h2>games / interactive demos</h2>
-      <details>
-        <summary>aberratium (game)</summary>
+      <details><summary>aberratium (game)</summary>
         <p>
           my acerola jam 0 submission.
         </p>
         <a href="https://magnogen.itch.io/aberratium">show me (itch)</a>
         <a href="https://github.com/Magnogen/aberratium">sauce (github)</a>
       </details>
-      <details><summary>sand</summary>
+      <details><summary>weirdle (game practice)</summary>
+        <p>
+          wordle practice.
+        </p>
+        <a href="https://magnogen.net/weirdle">show me</a>
+        <a href="https://github.com/Magnogen/weirdle">sauce (github)</a>
+      </details>
+      <details><summary>sand (cellular automata)</summary>
         <p>
           a browser-based cellular automata written in js.
           you can play with a bunch of elements, from sand and water to fire and lava.
