--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
         <a href="https://magnogen.net/Graidients">show me</a>
         <a href="https://github.com/Magnogen/Graidients">sauce (github)</a>
       </details>
+      <details><summary>dots</summary>
+        <p>
+          play with some jiggly dots.
+          written in js. 
+        </p>
+        <a href="https://magnogen.net/dots">show me</a>
+        <a href="https://github.com/Magnogen/dots">sauce (github)</a>
+      </details>
       <details><summary>primes</summary>
         <p>
           prime numbers go brr. 
