make chroma.js green

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </tr>
           <tr>
             <td><a href="https://src.magnogen.net/colour.js">colour.js</a></td>
-            <td>poor boy's <a href="https://gka.github.io/chroma.js/">chroma.js</a></td>
+            <td>poor boy's <a class="green" href="https://gka.github.io/chroma.js/">chroma.js</a></td>
           </tr>
           <tr>
             <td><a class="green" href="https://src.magnogen.net/dom.js">dom.js</a></td>
