bg pattern texture thing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Home | Magnogen</title>
     <meta name="description" content="Magnogen's Official Website">
     <base target="_blank">
+    <script src="https://src.magnogen.net/dom.js"></script>
+    <script src="https://src.magnogen.net/random.js"></script>
+    <script src="bg.js"></script>
   </head>
   <body>
+    <canvas id="bg"></canvas>
     <header>
       <h1>magnogen.net</h1>
       <span id="tagline">hi im mag</span>
@@ -224,6 +228,5 @@
       </details>
       
     </main>
-    <footer>made with &lt;3 by magnogen</footer>
   </body>
 </html>
