make background scrollable (up to large number)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="bg.js"></script>
   </head>
   <body>
-    <canvas id="bg"></canvas>
+    <div id="bg-wrapper">
+      <canvas id="bg"></canvas>
+    </div>
     <header>
       <h1>magnogen.net</h1>
       <span id="tagline">hi im mag</span>
@@ -83,7 +85,7 @@
           </tr>
           <tr>
             <td><a href="https://src.magnogen.net/colour.js">colour.js</a></td>
-            <td>poor boy's <a class="green" href="https://gka.github.io/chroma.js/">chroma.js</a></td>
+            <td>poor boy's <a href="https://gka.github.io/chroma.js/">chroma.js</a></td>
           </tr>
           <tr>
             <td><a class="green" href="https://src.magnogen.net/dom.js">dom.js</a></td>
