click and description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Home | Magnogen</title>
-    <meta name="description" content="Magnogen's Official Website">
+    <meta name="description" content="My little corner of the Internet">
     <base target="_blank">
     <script src="https://src.magnogen.net/dom.js"></script>
     <script src="https://src.magnogen.net/random.js"></script>
@@ -165,6 +165,13 @@
         </p>
         <a href="https://magnogen.itch.io/aberratium">show me (itch)</a>
         <a href="https://github.com/Magnogen/aberratium">sauce (github)</a>
+      </details>
+      <details><summary>click (game)</summary>
+        <p>
+          clicky clicky click click.
+        </p>
+        <a href="https://magnogen.net/click">show me</a>
+        <a href="https://github.com/Magnogen/click">sauce (github)</a>
       </details>
       <details><summary>weirdle (game practice)</summary>
         <p>
