--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <base target="_blank">
     <script src="https://src.magnogen.net/dom.js"></script>
     <script src="chroma.js"></script>
-    <script src="sketch.js"></script>
+    <script src="colour.js"></script>
   </head>
   <body>
     <header>
