--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
           </main>
         </article>
         <article>
+          <header><h3>Fractal Explorer</h3></header>
+          <main>
+            Explore fractals like the Mandelbrot Set or Julia Sets.
+            Written in JS.
+            <a href="https://magnogen.net/fractalexplorer">Show Me</a>
+            <a href="https://github.com/Magnogen/fractalexplorer">Sauce (GitHub)</a>
+          </main>
+        </article>
+        <article>
           <header><h3>Click</h3></header>
           <main>
             Clicky clicky click click.
